# MyRAGsystem

./: Insights.txt  README.md  pyproject.toml  requirements.txt
src/: Context.py  LLM.py  Summarizer.py  TextSplitter.py  Transcriber.py  main.py
src/database/: model.py  orm.py
