[tool.poetry]
name = "myragsystem"
version = "0.1.0"
description = ""
authors = ["Andrey Tarasenko <lsa328@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
torch = {version = "^2.5.1+cu124", source = "pytorch_gpu"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch_gpu"}
pathlib = "^1.0.1"
fastapi = "^0.115.6"
clickhouse-connect = "^0.8.11"
speechrecognition = "^3.12.0"
transformers = "^4.47.1"
datasets = "^3.2.0"
accelerate = "^1.2.1"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
